<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_hand_detector</name>
  <version>0.0.1</version>
  <description>ROS 2 package for real-time right-hand keypoint detection using MediaPipe and publishing keypoints.</description>

  <maintainer email="KyaKayKya@gmail.com">root</maintainer>
  <license>MIT</license>

  <depend>service_interfaces</depend>

  <!-- ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Python 3rd-party libraries -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
